--- a/logging.ipynb
+++ b/logging.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "logging.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO514w3uBPlJTgTIBmilTt6",
+      "authorship_tag": "ABX9TyOpAm96upbEySVdOHmoU5V7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,9 +33,10 @@
       },
       "source": [
         "import logging\n",
-        "import logging.config"
+        "import logging.config\n",
+        "from logging.handlers import RotatingFileHandler"
       ],
-      "execution_count": 41,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -48,7 +49,7 @@
       "source": [
         "logging.config.fileConfig('logging.conf')"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -62,7 +63,7 @@
         "logging.basicConfig(level=logging.DEBUG, format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',\n",
         "                    datefmt='%m/%d/%Y %H:%M:%S')"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +77,7 @@
         "logger = logging.getLogger(__name__)\n",
         "logger.propagate = True"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,7 +91,7 @@
         "stream_h = logging.StreamHandler()\n",
         "file_h = logging.FileHandler('file.log')"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +105,7 @@
         "stream_h.setLevel(logging.WARNING)\n",
         "file_h.setLevel(logging.ERROR)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +120,7 @@
         "stream_h.setFormatter(formatter)\n",
         "file_h.setFormatter(formatter)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -133,7 +134,7 @@
         "logger.addHandler(stream_h)\n",
         "logger.addHandler(file_h)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +151,7 @@
         "logger.error('This is an error message')\n",
         "logger.critical('This is a critical message')"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +169,7 @@
         "logger = logging.getLogger('simpleExample')\n",
         "logger.debug('this is a debug message')"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,6 +179,35 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tojtnjmtnw5Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "logger.setLevel(logging.INFO)\n",
+        "handler = RotatingFileHandler('app.log', maxBytes=2000, backupCount=5)\n",
+        "logger.addHandler(handler)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c-A4jubfoFfF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for _ in range(1000):\n",
+        "    logger.info('Hello, world!')"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
