Создано с помощью Colaboratory

--- a/logging.ipynb
+++ b/logging.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "logging.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpAm96upbEySVdOHmoU5V7",
+      "authorship_tag": "ABX9TyNi3son5ga53iEa4jELSVAG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,9 +34,10 @@
       "source": [
         "import logging\n",
         "import logging.config\n",
-        "from logging.handlers import RotatingFileHandler"
+        "from logging.handlers import RotatingFileHandler, TimedRotatingFileHandler\n",
+        "import time"
       ],
-      "execution_count": 1,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -49,7 +50,7 @@
       "source": [
         "logging.config.fileConfig('logging.conf')"
       ],
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -63,7 +64,7 @@
         "logging.basicConfig(level=logging.DEBUG, format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',\n",
         "                    datefmt='%m/%d/%Y %H:%M:%S')"
       ],
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -77,7 +78,7 @@
         "logger = logging.getLogger(__name__)\n",
         "logger.propagate = True"
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -91,7 +92,7 @@
         "stream_h = logging.StreamHandler()\n",
         "file_h = logging.FileHandler('file.log')"
       ],
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -105,7 +106,7 @@
         "stream_h.setLevel(logging.WARNING)\n",
         "file_h.setLevel(logging.ERROR)"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -120,7 +121,7 @@
         "stream_h.setFormatter(formatter)\n",
         "file_h.setFormatter(formatter)"
       ],
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -134,7 +135,7 @@
         "logger.addHandler(stream_h)\n",
         "logger.addHandler(file_h)"
       ],
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -151,7 +152,7 @@
         "logger.error('This is an error message')\n",
         "logger.critical('This is a critical message')"
       ],
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -163,18 +164,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a2ceb4ac-49db-40ac-8474-b601c2ae683b"
+        "outputId": "dad74586-e0a0-46d8-a652-64bc2812eb41"
       },
       "source": [
         "logger = logging.getLogger('simpleExample')\n",
         "logger.debug('this is a debug message')"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2020-08-30 03:52:00,133 - simpleExample - DEBUG - this is a debug message\n"
+            "2020-08-30 04:38:15,756 - simpleExample - DEBUG - this is a debug message\n"
           ],
           "name": "stdout"
         }
@@ -189,10 +190,11 @@
       },
       "source": [
         "logger.setLevel(logging.INFO)\n",
-        "handler = RotatingFileHandler('app.log', maxBytes=2000, backupCount=5)\n",
+        "#handler = RotatingFileHandler('app.log', maxBytes=2000, backupCount=5)\n",
+        "handler = TimedRotatingFileHandler('timed_test.log', when='s', interval=5, backupCount=5)\n",
         "logger.addHandler(handler)"
       ],
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -203,8 +205,9 @@
         "colab": {}
       },
       "source": [
-        "for _ in range(1000):\n",
-        "    logger.info('Hello, world!')"
+        "for _ in range(10060):\n",
+        "    logger.info('Hello, world!')\n",
+        "    time.sleep(5)"
       ],
       "execution_count": null,
       "outputs": []
