Создано с помощью Colaboratory

--- a/decorators.ipynb
+++ b/decorators.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "decorators.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPQ2yCYlsdfiLwtdjvZOjz6",
+      "authorship_tag": "ABX9TyM3NAhcKup9DLXVH47tRvrI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "source": [
         "import functools"
       ],
-      "execution_count": 42,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -55,7 +55,7 @@
         "        return result\n",
         "    return wrapper"
       ],
-      "execution_count": 43,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
         "#         return result\n",
         "#     return wrapper"
       ],
-      "execution_count": null,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
         "# def print_name():\n",
         "#     print('Alex')"
       ],
-      "execution_count": 44,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
         "def add5(x):\n",
         "    return x + 5"
       ],
-      "execution_count": 45,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
         "#print_name = start_end_decorator(print_name)\n",
         "#print_name()"
       ],
-      "execution_count": 46,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -133,13 +133,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "4202f6b2-3694-47a3-b2f8-cfcda4550a9f"
+        "outputId": "cf005a2d-46ea-4cf3-bbed-5f6dd72a5b2b"
       },
       "source": [
         "result = add5(10)\n",
         "print(result)"
       ],
-      "execution_count": 47,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,6 +147,205 @@
             "Start\n",
             "End\n",
             "15\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AxXYCEfCR7St",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "21e1e22f-51f2-4758-bc91-8b2158f1dacf"
+      },
+      "source": [
+        "def repeat(num_times):\n",
+        "    def decorator_repeat(func):\n",
+        "        @functools.wraps(func)\n",
+        "        def wrapper(*args, **kwargs):\n",
+        "            for _ in range(num_times):\n",
+        "                result = func(*args, **kwargs)\n",
+        "            return result\n",
+        "        return wrapper\n",
+        "    return decorator_repeat\n",
+        "  \n",
+        "@repeat(num_times=4)\n",
+        "def greet(name):\n",
+        "    print(f\"Hello {name}\")\n",
+        "\n",
+        "greet('Alex')"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello Alex\n",
+            "Hello Alex\n",
+            "Hello Alex\n",
+            "Hello Alex\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BV7ibDTnVGjr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def debug(func):\n",
+        "    @functools.wraps(func)\n",
+        "    def wrapper(*args, **kwargs):\n",
+        "        args_repr = [repr(a) for a in args]\n",
+        "        kwargs_repr = [f\"{k}={v!r}\" for k, v in kwargs.items()]\n",
+        "        signature = \", \".join(args_repr + kwargs_repr)\n",
+        "        print(f\"Calling {func.__name__}({signature})\")\n",
+        "        result = func(*args, **kwargs)\n",
+        "        print(f\"{func.__name__!r} returned {result!r}\")\n",
+        "        return result\n",
+        "    return wrapper"
+      ],
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UZbPRlY4U0CN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "@debug\n",
+        "@start_end_decorator\n",
+        "def say_hello(name):\n",
+        "    greeting = f'Hello {name}'\n",
+        "    print(greeting)\n",
+        "    return greeting"
+      ],
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i4hXf0sTWaJ1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 120
+        },
+        "outputId": "82f65bad-e2b0-47e8-8bcd-ae9c681e9482"
+      },
+      "source": [
+        "say_hello('Dmitrii')"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Calling say_hello('Dmitrii')\n",
+            "Start\n",
+            "Hello Dmitrii\n",
+            "End\n",
+            "'say_hello' returned 'Hello Dmitrii'\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Hello Dmitrii'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xedQhsCyX21k",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class CountCalls:\n",
+        "\n",
+        "    def __init__(self, func):\n",
+        "        self.func = func\n",
+        "        self.num_calls = 0\n",
+        "\n",
+        "    def __call__(self, *args, **kwargs):\n",
+        "        self.num_calls +=1\n",
+        "        print(f'This is executed {self.num_calls} times')\n",
+        "        return self.func(*args, **kwargs)     "
+      ],
+      "execution_count": 107,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iDYoyQIeY0-W",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "@CountCalls\n",
+        "def say_hello():\n",
+        "    print('Hello')"
+      ],
+      "execution_count": 108,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h7KL3cPwZKPc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "02c16f4e-eb75-49ce-8c42-70a2f00cb979"
+      },
+      "source": [
+        "say_hello()\n",
+        "say_hello()\n",
+        "say_hello()\n",
+        "say_hello()"
+      ],
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "This is executed 1 times\n",
+            "Hello\n",
+            "This is executed 2 times\n",
+            "Hello\n",
+            "This is executed 3 times\n",
+            "Hello\n",
+            "This is executed 4 times\n",
+            "Hello\n"
           ],
           "name": "stdout"
         }
